--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "yarn serve --dev",
-    "serve": "npx -p sirv-cli sirv .",
+    "serve": "npx -p sirv-cli sirv . --single",
     "build": "echo This is a static template, there is no bundler or bundling involved!"
   }
 }
